Fix login and register logo width on mobile

--- a/web/src/app/modules/anonymous/site/authentication/login/login.component.scss
+++ b/web/src/app/modules/anonymous/site/authentication/login/login.component.scss
@@ -10,6 +10,7 @@
 
   @media screen and (max-width: $small-screen) {
     width: 100%;
+    max-width: 150px;
   }
 }
 
